--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="child">
             <center>
                 <h1>Welcome to My Bio</h1>
-                <img src="saya.png" alt="" height="350px">
+                <img src="https://github.com/MochammadYusuf/tugas_1_pem_web/blob/main/saya.png" alt="github.com" height="350px">
                 <div class="container-1">
                     <p>Haiii!!! Nama Saya <b>Mochammad Yusuf Pratama</b> berasal dari Surabaya, Jawa Timur.
                     Namun lahir saya di Malang tepatnya 30 November 2002.
